MacViews: Fix setMarkedText in BridgedContentView to take replacementRange into account.

This CL changes setMarkedText:selectedRange:replacementRange: method implemented
by BridgedContentView to take replacementRange parameter into account. This
prevents the insertion of redudant characters by the IME, when accented
characters are input. Also, a test is added which fails on the current master.

BUG=624657

Review-Url: https://codereview.chromium.org/2177853002
Cr-Commit-Position: refs/heads/master@{#408331}

Former-commit-id: 89e44b6df97a0f5c63586de6a9716b4e18339c23